<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clGridLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0"
    android:columnCount="4"
    android:rowCount="2">
        <ImageView
            android:id="@+id/iv_acc"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center|top"
            android:contentDescription="@string/iv_acc"
            android:paddingHorizontal="20dp"
            android:paddingVertical="0dp"
            app:srcCompat="@drawable/acc" />
        <TextView
            android:id="@+id/tv_change_lane"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:text="@string/tv_change_lane"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/tv_horizontal_follow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:text="@string/tv_horizontal_follow" />
        <ImageView
            android:id="@+id/iv_lks"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_gravity="center|top"
            android:contentDescription="@string/iv_lks"
            android:paddingHorizontal="20dp"
            app:srcCompat="@drawable/lks" />

        <TextView
            android:id="@+id/tv_acc_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="top|center_horizontal"
            android:text="0km/h"
            android:gravity="right"
            />

        <TextView
            android:id="@+id/tv_hwa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="top|center_horizontal"
            android:visibility="invisible"
            android:text="HWA"
            android:textStyle="bold" />
</GridLayout>